Fix horizontal scrollbar for most resolutions

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 880px) {
-  .footer {
+  .footer__copyright {
     margin-left: 5.9%;
     max-width: calc(100% - 19px);
   }
